@@ -162,7 +162,7 @@ For detailed info about a platform's support consult the calling convention appe
                                & \ninetyb {\bf Alpha}\ninetye & \ninetyb {\bf ARM}\ninetye & \ninetyb {\bf ARM64}\ninetye & \ninetyb {\bf MIPS (32)}\ninetye & \ninetyb {\bf MIPS (64)}\ninetye & \ninetyb {\bf SuperH}\ninetye & \ninetyb {\bf PowerPC (32)}\ninetye & \ninetyb {\bf PowerPC (64)}\ninetye & \ninetyb {\bf m68k}\ninetye & \ninetyb {\bf m88k}\ninetye & \ninetyb {\bf x86}\ninetye & \ninetyb {\bf x64}\ninetye & \ninetyb {\bf Itanium}\ninetye & \ninetyb {\bf SPARC}\ninetye & \ninetyb {\bf SPARC64}\ninetye \\
 \hline                                                                                     
 {\bf Windows family}           & \marknotx                    & \markunkn                  & \marknotx                    & \marknotx                        & \marknotx                        & \marknotx                     & \marknotx                           & \marknotx                           & \marknotx                   & \marknotx                   & \markcmpl                  & \markcmpl                  & \marknimp                      & \marknotx                    & \marknotx                      \\
-{\bf Linux}                    & \marknimp                    & \markcmpl                  & \markcmpl                    & \markunkn                        & \markunkn                        & \marknotx                     & \markimpl                           & \markcmpl                           & \marknotx                   & \marknotx                   & \markcmpl                  & \markcmpl                  & \marknotx                      & \markimpl                    & \markimpl                      \\
+{\bf Linux}                    & \marknimp                    & \markcmpl                  & \markcmpl                    & \markunkn                        & \markunkn                        & \marknotx                     & \markcmpl                           & \markcmpl                           & \marknotx                   & \marknotx                   & \markcmpl                  & \markcmpl                  & \marknotx                      & \markimpl                    & \markimpl                      \\
 {\bf Mac OS X/iOS/Darwin}      & \marknotx                    & \markcmpl                  & \markunkn                    & \marknotx                        & \marknotx                        & \marknotx                     & \markcmpl                           & \markunkn                           & \marknotx                   & \marknotx                   & \markcmpl                  & \markcmpl                  & \marknotx                      & \marknotx                    & \marknotx                      \\
 {\bf FreeBSD}                  & \marknimp                    & \markcmpl                  & \marknotx                    & \markunkn                        & \markunkn                        & \marknimp                     & \markimpl                           & \markunkn                           & \marknotx                   & \marknotx                   & \markcmpl                  & \markcmpl                  & \marknimp                      & \markunkn                    & \markunkn                      \\
 {\bf NetBSD}                   & \marknimp                    & \markcmpl                  & \marknotx                    & \markimpl                        & \markunkn                        & \marknimp                     & \markimpl                           & \markunkn                           & \marknimp                   & \marknimp                   & \markcmpl                  & \markcmpl                  & \marknimp                      & \markimpl                    & \markunkn                      \\
